--- a/htmls/header.html
+++ b/htmls/header.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/header.css">
     <script src="https://kit.fontawesome.com/dacbd6cb00.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
+
     <header>
         <div class="izq">
             <a href="#"><img src="../img/IMG-20240916-WA0012-removebg-preview.png" alt="logo"></a>
@@ -75,4 +79,6 @@
             </li>
         </ul>
     </aside>
+    
 </body>
+</html>
