--- a/htmls/header.html
+++ b/htmls/header.html
@@ -10,8 +10,11 @@
 
     <header>
         <div class="izq">
-            <a href="#"><img src="../img/IMG-20240916-WA0012-removebg-preview.png" alt="logo"></a>
-            <a href="#" class="btn_cat"><i class="fa-solid fa-bars"></i> <span class="categoria">Todas las categorías</span></a>
+            <a href="#"><img src="../img/logo.png" alt="logo"></a>
+            <a href="#" class="btn_cat" id="openMenuBtn">
+                <i class="fa-solid fa-bars"></i> 
+                <span class="categoria">Todas las categorías</span>
+            </a>
         </div>
         <div class="centro">
             <div class="search-container">
@@ -27,7 +30,7 @@
 
 
 
-
+    <div class="overlay"></div>
     <aside class="menu">
         <div class="menu-header">
             <h3>Categorías</h3>
@@ -79,6 +82,6 @@
             </li>
         </ul>
     </aside>
-    
+    <script src="../js/menu.js"></script>
 </body>
 </html>
