--- a/paginas/Registrarse.html
+++ b/paginas/Registrarse.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h2>REGISTRARSE</h2>
+
+
+    <h3>Crear cuenta</h3>
     <form action="">
+        <img src="../img/logo.png" alt="">
         <label for="nombre">Nombre y Apellidos</label>
         <input type="text" name="nombre" id="nombre"><br>
 
