--- a/paginas/Registrarse.html
+++ b/paginas/Registrarse.html
@@ -6,13 +6,9 @@
     <link rel="stylesheet" href="../css/forms.css">
     <title>Registrarse</title>
 </head>
-<body>
-    <h2>REGISTRARSE</h2>
-
-
-    <h3>Crear cuenta</h3>
+<body> 
     <form action="">
-        <img src="../img/logo.png" alt="">
+        <img src="../img/logo.png" alt="" class="logo"><h3>Crear cuenta</h3>
         <label for="nombre">Nombre y Apellidos</label>
         <input type="text" name="nombre" id="nombre"><br>
 
@@ -29,7 +25,7 @@
         <input type="password" name="rcontraseña" id="rcontraseña"><br>
 
         <input type="submit" value="Enviar">
-
+        <a href="Inicio de sesion.html">¿Ya tienes cuenta?</a>
     </form>
 </body>
 </html>
