Añadido el controlador

--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
     <div class="bloque">
         <div class="conctacto">
             <ul>
-                <li><a href="#">Contacto y ayuda</a></li>
+                <li><a href="index.php?page=contacto">Contacto y ayuda</a></li>
                 <li><a href="#">Quienes somos</a></li>
                 <li><a href="#">Preguntas Frecuentes</a></li>
             </ul>
