--- a/login.html
+++ b/login.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/forms.css">
+    <link rel="stylesheet" href="css/forms.css">
     <title>Registrarse</title>
 </head>
 <body>
     
     <form action="">
-        <img src="../img/logo.png" alt="" class="logo"><h3>Inicio de sesion</h3>
+        <img src="img/logo.png" alt="" class="logo"><h3>Inicio de sesion</h3>
        
         <label for="email">Correo Electronico</label>
         <input type="email" name="email" id="email"><br>
