--- a/Registrarse.html
+++ b/Registrarse.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/forms.css">
-    <title>Registrarse</title>
+    <title>Registro</title>
 </head>
 <body> 
     <form action="">
         <img src="../img/logo.png" alt="" class="logo"><h3>Crear cuenta</h3>
         <label for="nombre">Nombre y Apellidos</label>
         <input type="text" name="nombre" id="nombre"><br>
+
+        <label for="fecha">Fecha de nacimiento</label>
+        <input type="text" name="fecha" id="fecha"><br>
 
         <label for="Telefono">Numero de Telefono</label>
         <input type="tel" name="tlfn" id="tlfn"><br>
