--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/forms.css">
-    <title>Registrarse</title>
+    <title>Contacto</title>
 </head>
 <body>
     
