--- a/Registrarse.html
+++ b/Registrarse.html
@@ -28,7 +28,7 @@
         <input type="password" name="rcontraseña" id="rcontraseña"><br>
 
         <input type="submit" value="Enviar">
-        <a href="Inicio de sesion.html">¿Ya tienes cuenta?</a>
+        <a href="login.html">¿Ya tienes cuenta?</a>
     </form>
 </body>
 </html>
