--- a/vistas/footer.html
+++ b/vistas/footer.html
@@ -3,7 +3,7 @@
         <div class="conctacto">
             <ul>
                 <li><a href="index.php?page=contacto">Contacto y ayuda</a></li>
-                <li><a href="#">Quienes somos</a></li>
+                <li><a href="index.php?page=quien">Quienes somos</a></li>
                 <li><a href="#">Preguntas Frecuentes</a></li>
             </ul>
         </div>
