--- a/vistas/footer.html
+++ b/vistas/footer.html
@@ -4,25 +4,28 @@
             <ul>
                 <li><a href="index.php?page=contacto">Contacto y ayuda</a></li>
                 <li><a href="index.php?page=quien">Quienes somos</a></li>
-                <li><a href="#">Preguntas Frecuentes</a></li>
+                <li><a href="index.php?page=preguntas">Preguntas Frecuentes</a></li>
             </ul>
         </div>
         <div class="ayuda">
             <ul>
-                <li><a href="#">Condiciones generales</a></li>
-                <li><a href="#">Politica de Cookies</a></li>
-                <li><a href="#">Privacidad</a></li>
+                <li><a href="index.php?page=condiciones">Condiciones generales</a></li>
+                <li><a href="index.php?page=cookies">Politica de Cookies</a></li>
+                <li><i class="fa-solid fa-phone"></i> 608 40 64 23</li>
             </ul>
         </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3042.7357524174427!2d-3.730849923602058!3d40.30382586250276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422093e011a03b%3A0xe6349eb0b93a0abb!2sC.%20Pasi%C3%B3n%2C%2028901%20Getafe%2C%20Madrid!5e0!3m2!1ses!2ses!4v1741533648774!5m2!1ses!2ses" width="600" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
         <div class="redes">
             <ul>
-                <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="https://www.instagram.com/digitalbeats/"><i class="fa-brands fa-instagram"></i> @digitalbeats</a></li>
+                <li><a href="https://www.x.com/digitalbeats/"><i class="fa-brands fa-x-twitter"></i> @digitalbeats</a></li>
+                <li><a href="https://www.facebook.com/digitalbeats/"><i class="fa-brands fa-facebook"></i> @digitalbeats</a></li>
+                <li><a href="https://www.youtube.com/digitalbeats/"><i class="fa-brands fa-youtube"></i> @digitalbeats</a></li>
             </ul>
         </div>
     </div>
+    <br>
     <p class="copy">&copy 2024-2025 Digital Beats</p>
 </footer>
 
